Added Nakuru to list of cities insights

--- a/market-insights.html
+++ b/market-insights.html
@@ -162,7 +162,8 @@
       <h3>Insights by Region</h3>
       <p><strong>Nairobi:</strong> Westlands, Kilimani, and Ruaka continue to show high rental yields. <br/>
          <strong>Mombasa:</strong> Tourist areas like Nyali are seeing increased interest in short-term rentals. <br/>
-         <strong>Kisumu:</strong> Expansion of road infrastructure is boosting peripheral land values.
+         <strong>Kisumu:</strong> Expansion of road infrastructure is boosting peripheral land values. <br/>
+         <strong>Nakuru:</strong> An emerging urban area with lots of opportunities
       </p>
     </div>
 
