--- a/market-insights.html
+++ b/market-insights.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
   <title>Makazi Yangu | Market Insights</title>
   <style>
     * {
@@ -107,6 +107,17 @@
       margin-top: 40px;
     }
 
+    footer a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer a:hover {
+      color: #a8e6a1;
+    }
+
     #topBtn {
       display: none;
       position: fixed;
@@ -163,8 +174,7 @@
       <p><strong>Nairobi:</strong> Westlands, Kilimani, and Ruaka continue to show high rental yields. <br/>
          <strong>Mombasa:</strong> Tourist areas like Nyali are seeing increased interest in short-term rentals. <br/>
          <strong>Kisumu:</strong> Expansion of road infrastructure is boosting peripheral land values. <br/>
-         <strong>Nakuru:</strong> An emerging urban area with lots of opportunities
-      </p>
+         <strong>Nakuru:</strong> An emerging urban area with lots of opportunities.</p>
     </div>
 
     <div class="insight">
@@ -177,6 +187,11 @@
 
   <footer>
     <p>&copy; 2025 Makazi Yangu. All rights reserved.</p>
+    <div>
+      <a href="#">Facebook</a>
+      <a href="#">Instagram</a>
+      <a href="#">Twitter</a>
+    </div>
   </footer>
 
   <script>
