--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <section class="featured-properties">
       <h2>Featured Properties</h2>
-      
+       
       <div class="property-grid">
         <div class="property-card">
-          <img src="images/img1.jpeg" alt="Luxury Apartment" />
+          <img src="https://i.pinimg.com/474x/e9/44/3e/e9443e78f3028f471bed03cb5f7e83ed.jpg" alt="Luxury Apartment" />
           <h3>Luxury Apartment in Westlands</h3>
           <p>KES 25M • 4 Bed • 3 Bath</p>
         </div>
