--- a/Makaziyangu.html
+++ b/Makaziyangu.html
@@ -12,13 +12,24 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     rel="stylesheet"
   />
+  <style>
+    body.homepage-bg {
+      background-image: url("images/White.png");
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 400px auto;
+      background-attachment: fixed;
+      background-color: #ffffff;
+      opacity: 0.97;
+    }
+  </style>
 </head>
-<body>
+<body class="homepage-bg">
   <!-- Navbar -->
   <header style="background-color:white;">
     <div class="nav-container">
       <div class="logo">
-        <img src="images/mklogowhitedb.png" alt="Makazi Yangu Logo" />
+        <img src="Images/Images/White.png" alt="Makazi Yangu Logo" />
       </div>
       <nav>
         <ul>
@@ -169,7 +180,7 @@
     </div>
   </section>
 
-  <!-- Testimonials -->
+  
   <section class="testimonial-section">
     <h2>What Our Clients Say</h2>
     <div class="testimonial-container">
@@ -211,6 +222,12 @@
           </a>
         </div>
         <div class="slide">
-          <a href="https://www.interiorstyle.com" target="_
-::contentReference[oaicite:12]{index=12}
- 
+          <a href="https://www.interiorstyle.com" target="_blank">
+            <img src="logos/partner3.png" alt="Interior Designers" />
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
