--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Makazi Yangu - Home</title>
   <link rel="stylesheet" href="Makaziyangu.css" />
-  <link rel="icon" href="images/mklogowhitedb.png" type="image/png" />
+  <link rel="icon" href="Images/White.png" type="image/png" />
 </head>
-<body>
+<body class="homepage-bg">
   <header>
     <nav class="nav-container">
       <div class="logo">Makazi Yangu</div>
@@ -29,7 +29,7 @@
 
     <section class="featured-properties">
       <h2>Featured Properties</h2>
-       
+      
       <div class="property-grid">
         <div class="property-card">
           <img src="https://i.pinimg.com/474x/e9/44/3e/e9443e78f3028f471bed03cb5f7e83ed.jpg" alt="Luxury Apartment" />
@@ -37,7 +37,7 @@
           <p>KES 25M • 4 Bed • 3 Bath</p>
         </div>
         <div class="property-card">
-          <img src="images/img2.jpeg" alt="Villa" />
+          <img src="https://i.pinimg.com/474x/aa/c8/ad/aac8ade8b81c94c381a06726dc871faa.jpg" alt="Villa" />
           <h3>Villa in Karen</h3>
           <p>KES 55M • 5 Bed • 4 Bath</p>
         </div>
