--- a/properties.html
+++ b/properties.html
@@ -231,7 +231,7 @@
 
     <div class="listing-grid" id="listings">
       <div class="listing-card sale">
-        <img src="images/int6.jpeg" alt="Property">
+        <img src="https://i.pinimg.com/736x/de/3e/38/de3e3804049c6378a7e8a0f052f777df.jpg" alt="Property">
         <div class="tag">For Sale</div>
         <div class="listing-info">
           <h3>KES 9,500,000</h3>
@@ -242,7 +242,7 @@
       </div>
 
       <div class="listing-card rent">
-        <img src="images/int3.jpeg" alt="Property">
+        <img src="https://i.pinimg.com/736x/bb/bb/4e/bbbb4e6d7d4affa14caf9aa27d00ef74.jpg" alt="Property">
         <div class="tag">For Rent</div>
         <div class="listing-info">
           <h3>KES 45,000/mo</h3>
