--- a/index.html
+++ b/index.html
@@ -27,23 +27,20 @@
       <a href="blog.html" class="cta-button">Explore Properties</a>
     </section>
 
-    <section class="logo-section">
-      <img src="your-logo-path.png" alt="Makazi Yangu Logo" class="main-logo">
-    </section>
-
+    
     <section class="featured-properties">
       <h2>Featured Properties</h2>
       
       <div class="property-grid">
         <div class="property-card">
-          <img src="placeholder-image1.jpg" alt="Property 1" />
-          <h3>Property Title 1</h3>
-          <p>Details</p>
+          <img src="https://i.pinimg.com/474x/e9/44/3e/e9443e78f3028f471bed03cb5f7e83ed.jpg" alt="Luxury Apartment" />
+          <h3>Luxury Apartment in Westlands</h3>
+          <p>KES 25M • 4 Bed • 3 Bath</p>
         </div>
         <div class="property-card">
-          <img src="placeholder-image2.jpg" alt="Property 2" />
-          <h3>Property Title 2</h3>
-          <p>Details</p>
+          <img src="https://i.pinimg.com/474x/aa/c8/ad/aac8ade8b81c94c381a06726dc871faa.jpg" alt="Villa" />
+          <h3>Villa in Karen</h3>
+          <p>KES 55M • 5 Bed • 4 Bath</p>
         </div>
       </div>
     </section>
@@ -51,21 +48,17 @@
     <section class="testimonial-section">
       <h2>What Our Clients Say</h2>
       <div class="testimonials">
-        <blockquote>"Testimonial 1"</blockquote>
-        <blockquote>"Testimonial 2"</blockquote>
+        <blockquote>"Makazi Yangu helped me find my dream home fast!" - Jane</blockquote>
+        <blockquote>"Professional and reliable service." - Peter</blockquote>
       </div>
     </section>
 
-    <section class="contact-section">
-      <h2>Contact Us</h2>
-      <p>Contact information will go here.</p>
-    </section>
 
     <section class="partners">
       <h2>Our Partners</h2>
       <div class="partner-logos">
-        <img src="placeholder-partner1.png" alt="Partner 1" />
-        <img src="placeholder-partner2.png" alt="Partner 2" />
+        <img src="images/partner1.png" alt="Partner 1" />
+        <img src="images/partner2.png" alt="Partner 2" />
       </div>
     </section>
   </main>
