--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
   <link rel="icon" href="Images/White.png" type="image/png" />
 </head>
 <body class="homepage-bg">
-  <!-- Fixed Logo -->
-  <a href="index.html" class="logo-fixed">Makazi Yangu</a>
 
   <header>
     <nav class="nav-container">
-      
+      <div class="logo">Makazi Yangu</div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="blog.html">Blog</a></li>
@@ -29,6 +27,7 @@
       <p>Discover the best real estate listings in Kenya.</p>
       <a href="blog.html" class="cta-button">Explore Properties</a>
     </section>
+
 
 
     <section class="featured-properties">
@@ -60,7 +59,7 @@
     <section class="partners">
       <h2>Our Partners</h2>
       <div class="partner-logos">
-        <img src="images/partner1.png" alt="Partner 1" />
+        <img src="Images/Dark.png" alt="Partner 1" />
         <img src="images/partner2.png" alt="Partner 2" />
       </div>
     </section>
